feature: Add react native webview (#1)
* feature: add react native webview

* feat: Add platform specific code snippets

* task: update README.md

* feat: setup deployment config

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,6 +10,7 @@
     "react-native-config": "*",
     "react-native-svg": "*",
     "@react-native-async-storage/async-storage": "*",
-    "react-native-sensors": "*"
+    "react-native-sensors": "*",
+    "react-native-webview": "*"
   }
 }
