--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
+    "pm2:deploy:init": "pm2 deploy production setup",
+    "pm2:deploy:update": "pm2 deploy production update",
+    "pm2:deploy:rebuild": "pm2 deploy prodbuild update",
+    "web:build": "nx build web --prod --port 3005",
     "test": "nx test",
     "start:api": "nx serve api",
     "start:web": "nx serve web",
@@ -24,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.67.3",
     "react-native-sensors": "^7.3.5",
+    "react-native-webview": "^11.18.2",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.5.5",
     "socket.io": "^4.4.1",
